Fixed some spacing issues

--- a/css/site.sass
+++ b/css/site.sass
@@ -137,6 +137,7 @@ article.post
 
   header
     text-align: center
+    margin-bottom: $base-line-height
 
     a
       border-bottom: none
@@ -146,6 +147,10 @@ article.post
 
     .subtitle
       color: $light-text-colour
+
+  img
+    margin-top: $base-line-height
+    margin-bottom: $base-line-height
 
 // Projects page
 
